# buscraft

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_project.json
buscraft_out/: axi_agent.sv  axi_pkg.sv  buscraft_env.sv
buscraft_out/sim/vcs/: Makefile
src/buscraft/: main.py
src/buscraft/assets/icons/: buscraft_icon.icns
src/buscraft/cli/: cli_main.py
src/buscraft/core/: ai_engine.py  generator.py  license_manager.py  models.py  plugin_manager.py  project_io.py  simulators.py  spec_analyzer.py  spec_parser.py  spec_to_project.py  visualizer.py
src/buscraft/gui/: agent_table_model.py  ai_panel.py  license_dialog.py  main_window.py  project_wizard.py  protocol_config_panel.py  theme.py
src/buscraft/plugins/: __init__.py  amba_ahb.py  amba_apb.py  amba_axi.py  amba_chi.py  generic_blank.py  serial_i2c.py
src/buscraft/templates/common/: base_agent.sv.j2  base_assert.sv.j2  base_cov.sv.j2  base_env.sv.j2  base_interface.sv.j2  base_scoreboard.sv.j2  base_seq_item.sv.j2  base_sequence.sv.j2  base_tb_top.sv.j2  base_test.sv.j2  vip_features.svh.j2
src/buscraft/templates/protocols/amba/ahb/: ahb_agent.sv.j2  ahb_pkg.sv.j2
src/buscraft/templates/protocols/amba/apb/: apb_agent.sv.j2  apb_pkg.sv.j2
src/buscraft/templates/protocols/amba/axi/: axi_agent.sv.j2  axi_pkg.sv.j2
src/buscraft/templates/protocols/amba/chi/: chi_agent.sv.j2  chi_pkg.sv.j2
src/buscraft/templates/protocols/generic/: blank_env.sv.j2
src/buscraft/templates/sim/vcs/: Makefile.j2  coverage_cff.j2  run.sh.j2
(+2 files in other folders)
