[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buscraft"
version = "0.1.0"
description = "BusCraft UVM VIP generator prototype"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "Jinja2>=3.1",
    "graphviz>=0.20",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "huggingface_hub>=0.20.0",
    "llama-cpp-python>=0.3.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
buscraft = "buscraft.main:main"
buscraftcli = "buscraft.cli.cli_main:app"
